# chess

./: CMakeLists.txt  appstyle.qss  build_main.bat  chess.cpp  chess.h  chess.pro  chessboard.cpp  chessboard.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcts.h  stone.cpp  stone.h  test_build.pro
docs/: agents_design.md  analysis.md  task_progress.md  task_progress_dqnagent.md  task_progress_dqnmcts.md  task_progress_mcts.md  task_progress_pgagent.md
src/: abagent.cpp  abagent.h  aiagent.h  chess.cpp  chess.h  chessboard.cpp  chessboard.h  dqnagent.cpp  dqnagent.h  dqnmcts_agent.cpp  dqnmcts_agent.h  gamedb.cpp  gamedb.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcts.cpp  mcts.h  pgagent.cpp  pgagent.h  pos.cpp  pos.h  ppomcts_agent.cpp  ppomcts_agent.h  qssloader.hpp  stone.cpp  stone.h
src/rl/: dpg.cpp  dpg.h  dqn.cpp  dqn.h  drpg.cpp  drpg.h  mpg.cpp  mpg.h  ppo.cpp  ppo.h  sac.cpp  sac.h  transformer.hpp  trpo.cpp  util.hpp
test/: test_dqn_main.cpp  test_dqnmcts_main.cpp  test_main.cpp  test_mcts_main.cpp  test_pg_main.cpp  test_ppomcts_main.cpp  test_utils.h
